feat: added workspaceName to entity and provide list in endpoint
